--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@enymo:registry": "https://gitlab.internal.enymo.com/api/v4/projects/88/packages/npm/"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react": "^18.0.26",
     "postcss": "^8.4.17",
     "tsup": "^6.2.2",
