--- a/package.json
+++ b/package.json
@@ -28,13 +28,13 @@
     "@enymo:registry": "https://gitlab.internal.enymo.com/api/v4/projects/88/packages/npm/"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
     "@types/react": "^18.0.26",
     "postcss": "^8.4.17",
     "tsup": "^6.2.2",
     "typescript": "^4.7.4"
   },
   "peerDependencies": {
+    "axios": "^1.2.1",
     "react": ">=17.0.0",
     "react-hook-form": "^7.40.0"
   }
