--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@enymo/react-form-component",
+  "name": "@enymo-internal/react-form-component",
   "version": "1.5.1",
   "description": "Wrapper for react-hook-form to allow better use with components",
   "main": "dist/index.js",
@@ -33,7 +33,7 @@
   "author": "enymo GmbH",
   "license": "UNLICENSED",
   "publishConfig": {
-    "@enymo:registry": "https://gitlab.internal.enymo.com/api/v4/projects/88/packages/npm/"
+    "@enymo-internal:registry": "https://gitlab.internal.enymo.com/api/v4/projects/88/packages/npm/"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
