--- a/package.json
+++ b/package.json
@@ -1,18 +1,10 @@
 {
-  "name": "@enymo-internal/react-form-component",
+  "name": "@enymo/react-form-component",
   "version": "1.5.3",
   "description": "Wrapper for react-hook-form to allow better use with components",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "exports": {
-    "./package.json": "./package.json",
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
-    }
-  },
   "tsup": {
     "entry": [
       "src/js/index.ts"
@@ -23,6 +15,9 @@
     ],
     "dts": true
   },
+  "files": [
+    "/dist"
+  ],
   "scripts": {
     "build": "tsup"
   },
@@ -31,10 +26,7 @@
     "url": "https://gitlab.internal.enymo.com/enymo/library/react-form-component.git"
   },
   "author": "enymo GmbH",
-  "license": "UNLICENSED",
-  "publishConfig": {
-    "@enymo-internal:registry": "https://gitlab.internal.enymo.com/api/v4/projects/88/packages/npm/"
-  },
+  "license": "MIT",
   "devDependencies": {
     "@types/react": "^18.0.26",
     "postcss": "^8.4.17",
