Update peer dependency.

--- a/package.json
+++ b/package.json
@@ -37,6 +37,6 @@
     "axios": "^1.2.1",
     "react": ">=17.0.0",
     "react-hook-form": "^7.40.0",
-    "react-i18next": "^13.5.0"
+    "react-i18next": ">=13.5.0"
   }
 }
